# robotsp

./: .gitignore  .travis.yml  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  Rakefile  api-documentation.html  citing.html  genindex.html  index-msg.html  index.html  install.html  installation.html  objects.inv  package.xml  py-modindex.html  reference.html  robotsp.rosinstall  rosdoc.yaml  search.html  searchindex.js  setup.py  zbibliography.html  zreferences.html
_modules/: index.html
_modules/robotsp/: construct.html  gtsp.html  metric.html  parser.html  solver.html  tsp.html
_sources/: api-documentation.txt  citing.txt  install.txt  installation.txt  reference.txt  zreferences.txt
data/: benchmarks.hdf5
data/objects/: coupling_drill.kinbody.xml  coupling_ensenso.kinbody.xml  driller_base.kinbody.xml  ensenso.kinbody.xml  jig.kinbody.xml  makita.kinbody.xml  panel.kinbody.xml
data/objects/meshes/: jig.stl
data/robots/: denso_driller.robot.xml  denso_vs060.dae
data/worlds/: airbus_challenge.env.xml
doc/: .gitignore  bibliography.bib  citing.rst  conf.py  index.rst
scripts/: airbus_challenge_example.py  run_benchmarks.py
src/robotsp/: __init__.py  construct.py  metric.py  parser.py  solver.py  tsp.py
tests/: test_parser.py  test_tsp.py
